[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3.0"
glob = "0.3"

[dependencies]
anyhow = "1.0"
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.11.6"
log = "0.4"
wgpu = "24.0"
pollster = "0.3"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18"
tobj = { version = "3.2", default-features = false, features = ["async"]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
reqwest = { version = "0.11" }
wgpu = { version = "24.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
